# url-shortener

./: .env.local  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
src/: exceptions.py  main.py  url_shortener_repository.py  url_shortening.py  url_validator.py
tests/: conftest.py
tests/e2e/: test_main.py
tests/integration/: test_firestore.py
tests/unit/: test_url_shortening.py  test_url_validator.py  test_validation.py
